# ligate-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  railway.toml
.github/workflows/: ci.yml  cla.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  cursor.rs  handlers.rs  main.rs  queries.rs  responses.rs  stats.rs
crates/drip/: Cargo.toml
crates/drip/src/: lib.rs  ratelimit.rs  signer.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: attestation_id.rs  client.rs  db.rs  error.rs  ingest.rs  lib.rs  parser.rs
crates/indexer/tests/: e2e.rs
crates/indexer/tests/fixtures/: slot-100-batch-0.json  slot-latest.json  tx-by-hash.json  tx-event-0.json
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/rfc/: 0001-pagination.md  0002-response-shapes.md  0003-drip-status.md  README.md
grafana/: README.md  ligate-devnet-1-investor-metrics.json  operator-panel-replacements.md
migrations/: 20260507000001_init.sql  20260509000001_indexer_query_tables.sql  20260509000002_loosen_chain_elided_columns.sql  20260512000001_attestations_pubkey_nullable.sql  20260516000001_transactions_protocol_fee.sql  20260516000002_slots_settlement_columns.sql  20260516000003_transactions_fee_paid_nano_backfill.sql  20260517000001_attestation_id_lat.sql
