[package]
name = "ligate-api-indexer"
description = "Indexer service for Ligate Chain. Ingests blocks/txs/schemas/attestations into Postgres so the api's query layer can serve list/range/aggregate queries."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ligate-api-types = { workspace = true }

anyhow.workspace = true
bech32.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
hex.workspace = true
mockito = "1"
