[package]
name = "ligate-api-types"
description = "Shared serde types mirroring the Ligate Chain REST API responses, used by the indexer and the api query layer."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
